# Pulse-TUI

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
assets/: logo.ansi  logo.txt
config/: default.toml
pki/own/: cert.der
pki/private/: private.pem
src/: config.rs  main.rs
src/cli/: args.rs
src/core/: event.rs  mod.rs  mode.rs  source.rs  state.rs
src/events/: bus.rs  mod.rs
src/modbus/: config.rs  mod.rs  source.rs
src/mqtt/: config.rs  mod.rs  source.rs
src/opcua/: config.rs  mod.rs  source.rs
src/serial/: config.rs  mod.rs  source.rs
src/ui/: connect.rs  highlight.rs  mod.rs  modbus_monitor.rs  opcua_monitor.rs  panel.rs  render.rs  serial_monitor.rs  style.rs
